--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "mongodb": "^6.7.0",
+    "aws": "^0.0.3-2",
+    "aws-sdk": "^2.1654.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4"
   }
 }
