--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "cookie-parser": "^1.4.6",
     "aws": "^0.0.3-2",
     "aws-sdk": "^2.1654.0",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -25,8 +24,8 @@
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
-    "zod": "^3.23.8"
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.4"
+    "zod": "^3.23.8",
+    "multer": "^1.4.5-lts.1"
+
   }
 }
