--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
+    "stripe": "^16.8.0",
     "zod": "^3.23.8"
   }
 }
